fixed badges width on smaller devices

--- a/src/components/Code/code.css
+++ b/src/components/Code/code.css
@@ -218,6 +218,7 @@
   }
   .badge {
     max-height: 40px;
+    max-width: 40px;
   }
   .sm-h {
     height: 44px;
